--- a/reviews/others/saving-him/index.html
+++ b/reviews/others/saving-him/index.html
@@ -1,23 +1,10 @@
-<!DOCTYPE html><html lang="zh-CN"> <head><meta charset="UTF-8"><title>Saving Him</title></head> <body>  <article> <h1>Saving Him</h1> <p><em>2025-06-11</em></p> <p>📂 系列：others</p> <p>
+<!DOCTYPE html><html lang="zh-CN"> <head><meta charset="UTF-8"><title>Saving Him</title><link rel="stylesheet" href="/src/styles/review-layout.css"></head> <body>  <section class="review-content"> <article> <h1 style="font-size: 1.8rem; font-weight: bold;"> Saving Him <span style="font-size: 1rem; font-weight: normal; color: #666; margin-left: 0.5em;">
+by Sara Hurst </span> </h1> <p><em>2025.06.11</em></p> <div style="display: flex; align-items: center; gap: 50px; margin-left: 12px;"> <div style="flex: 0 0 auto;"> <a href="https://www.amazon.com/Saving-Him-Sara-Hurst-ebook/dp/B0CHHYRRZJ" target="_blank"> <img src="/pinned_between_lines_astro/assets/covers/saving-him.jpg" alt="Saving Him 封面" width="160"> </a> </div> <div style="font-size: 0.85em; color: #555;"> <strong>Saving Him</strong><br> <em>2023</em><br>
+封面来源：Amazon<br> <a href="https://www.amazon.com/Saving-Him-Sara-Hurst-ebook/dp/B0CHHYRRZJ" target="_blank">点击购买</a> </div> </div> <p>📂 系列：others</p> <p>
 🏷️ 标签：
-<span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 中篇 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 现代 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 救赎 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> MM </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 强强 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 军旅 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 特种兵 </span> </p> <h1 id="saving-him-by-sara-hurst">Saving Him by Sara Hurst</h1>
-<div style="display: flex; align-items: center; gap: 50px; margin-left: 12px;">
-  <!-- 左：封面图 -->
-  <div style="flex: 0 0 auto;">
-    <a href="https://www.amazon.com/Saving-Him-Sara-Hurst-ebook/dp/B0CHHYRRZJ" target="_blank">
-      <img src="../../../assets/covers/saving-him.jpg" alt="Saving Him 封面" width="160">
-    </a>
-  </div>
-  <!-- 右：购买信息 -->
-  <div style="font-size: 0.85em; color: #555;">
-    <strong>Saving Him</strong><br>
-    <em>Sara Hurst, 2023</em><br>
-    封面来源：Amazon<br>
-    <a href="https://www.amazon.com/Saving-Him-Sara-Hurst-ebook/dp/B0CHHYRRZJ" target="_blank">点击购买</a>
-  </div>
-</div>
-<p><strong>评分：7/10</strong><br>
-<strong>CP：Adam × Brock 结尾有一处骑乘反攻</strong><br>
+<span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 中篇 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 现代 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 救赎 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> MM </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 强强 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 军旅 </span><span style="display: inline-block; margin-right: 8px; padding: 2px 6px; background: #eee; border-radius: 6px; font-size: 0.85em;"> 特种兵 </span> </p> <p style="margin-top: 0; font-size: 0.95rem; color: #888;">
+评分：7 / 10
+</p> <div class="prose prose-zinc mt-6"> <p><strong>CP：Adam × Brock 结尾有一处骑乘反攻</strong><br>
 <strong>篇幅：中篇｜约 5 万字｜第一人称双视角</strong></p>
 <hr>
 <h2 id="简介">简介</h2>
@@ -38,7 +25,5 @@
 <p>小说里有很多情节都让我印象深刻。回忆线里，Brock 原本拥有幸福的四口之家，却在母亲与妹妹车祸去世后，父亲性情大变，对他施以家暴。Brock在多个寄养家庭中漂泊成长，直到18岁参军。在认识并爱上Adam后，他把Adam当作唯一的亲人。知道这一切的Adam在填写表格“直系亲属”（next of kin）一栏时，坚持写下Brock的名字，Brock深受感动。现实中，Adam在酷刑折磨的间隙回忆起这件事，一方面因那一刻Brock脸上的表情而感到温暖，另一方面又为可能让Brock承担“向亲人转告死讯”的责任而深感内疚，这一段很感人。</p>
 <p>文字间能很明显感到两人之间致命的吸引力，军旅环境的压抑，战场的残酷，结尾营救处的惊心动魄，读完我只觉得太短了。之前选这本书就是想找个中篇轻松不累，到头来却恨不得作者再写5万字日后谈……准备去翻系列其他文看有没有这一对的客串了。</p>
 <hr>
-<blockquote>
-<p>一方被抓被虐，另一方疯了一样去救，坦白说我就是爱这个梗😋 此生挚爱美（帅）强惨🥲</p>
-</blockquote>
-<div style="height: 8rem;"></div> </article>  </body></html>
+<p><span style="color: #e91e63;">一方被抓被虐，另一方疯了一样去救，坦白说我就是爱这个梗😋 此生挚爱美（帅）强惨🥲</span></p>
+<div style="height: 8rem;"></div> </div> </article> </section>  </body></html>
